--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
         
-       <span> <img src="images/columbia-logo.png" alt="columbia-logo"
-      title= "See columbia-logo"></span>
+        <img src="images/columbia-logo.png" alt="columbia-logo"
+      title= "See columbia-logo">
       
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
-         <p><span style="color:black">COLUMBIARECORDS.COM</span> </p>
+         <p>COLUMBIARECORDS.COM </p></span>
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
