--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
-         <p>COLUMBIARECORDS.COM </p>
+         <span style="color:black">COLUMBIARECORDS.COM </span>
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
