--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
         
-       <span><img src="images/columbia-logo.png" alt="columbia-logo"
+       <span><img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="columbia-logo"
       title= "See columbia-logo"></span> 
       
         <!-- span text 'COLUMBIARECORDS.COM' -->
