--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
         
-       <span> <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="columbia-logo"
-      title= "See columbia-logo"></span> 
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="columbia-logo"
+      title= "See columbia-logo">
       
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
